--- a/source/layouts/designs/Mixins.scss
+++ b/source/layouts/designs/Mixins.scss
@@ -1207,8 +1207,23 @@
 }
 %stretch-override {
   overflow: hidden;
-  &[class*='icon'],
   &[class*='center'] {
+    div {
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6,
+      p {
+        padding: 0;
+      }
+      img {
+        width: 100% !important;
+      }
+    }
+  }
+  &[class*='icon'] {
     background: none !important;
   }
 }
